Fix border color in dark mode

--- a/src/components/color-picker/color-picker.scss
+++ b/src/components/color-picker/color-picker.scss
@@ -29,7 +29,7 @@
 }
 
 .color-picker--inline {
-  border: solid 1px var(--sl-color-gray-90);
+  border: solid 1px var(--sl-panel-border-color);
   box-shadow: var(--sl-shadow-small);
 }
 
